[build-system]
requires = ["setuptools", "pyyaml"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {}

[project]
name = 'vcstool'
version = '0.3.0+por'
authors = [{name='Dirk Thomas', email='web@dirk-thomas.net'}]
maintainers = [{name='Aaron Wood', email='aaron.wood@plusonerobotics.com'}]
description = 'vcstool provides a command line tool to invoke vcs commands on multiple repositories'
license='Apache-2.0'
classifiers = [
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Topic :: Software Development :: Version Control',
    'Topic :: Utilities'
]
dependencies = ['pyyaml']

[project.urls]
"Homepage" = 'https://github.com/plusone-robotics/vcstool'

[project.scripts]
vcs = 'vcstool.commands.vcs:main'
vcs-branch = 'vcstool.commands.branch:main'
vcs-bzr = 'vcstool.commands.custom:bzr_main'
vcs-custom = 'vcstool.commands.custom:main'
vcs-diff = 'vcstool.commands.diff:main'
vcs-export = 'vcstool.commands.export:main'
vcs-git = 'vcstool.commands.custom:git_main'
vcs-help = 'vcstool.commands.help:main'
vcs-hg = 'vcstool.commands.custom:hg_main'
vcs-import = 'vcstool.commands.import_:main'
vcs-log = 'vcstool.commands.log:main'
vcs-pull = 'vcstool.commands.pull:main'
vcs-push = 'vcstool.commands.push:main'
vcs-remotes = 'vcstool.commands.remotes:main'
vcs-status = 'vcstool.commands.status:main'
vcs-svn = 'vcstool.commands.custom:svn_main'
vcs-validate = 'vcstool.commands.validate:main'
